# zeta-quant-system

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
clients/quant_data_sdk/: README.md  pyproject.toml
clients/quant_data_sdk/src/quant_data_sdk/: __init__.py  client.py  schemas.py
clients/quant_data_sdk/tests/: test_client.py
services/quant_factor_lab/: Dockerfile  README.md  pyproject.toml
services/quant_factor_lab/src/quant_factor_lab/: __init__.py  main.py
services/quant_factor_lab/src/quant_factor_lab/algorithms/: __init__.py  (+3 more)
services/quant_factor_lab/tests/: test_algorithm_registry.py  test_algorithm_review_evidence_repository.py  test_algorithm_review_service.py  test_factor_calculation_route.py  test_factor_calculation_service.py  test_health_route.py  test_momentum.py
services/quant_factor_validation/: Dockerfile  README.md  pyproject.toml
services/quant_factor_validation/src/quant_factor_validation/: __init__.py  main.py
services/quant_factor_validation/tests/: test_alphalens_evaluation_normalizer.py  test_external_evaluation_adapter.py  test_external_payload_comparison.py  test_factor_scoring.py  test_factor_validation_route.py  test_factor_validation_service.py  test_group_return_metrics.py  test_health_route.py  test_ic_metrics.py  test_object_store_integration.py  test_persistence_smoke_tool.py  test_qlib_evaluation_normalizer.py  test_validation_artifacts.py  test_validation_ledger_repository.py  test_validation_manifest.py  test_validation_persistence.py  test_validation_report.py  test_vectorbt_evaluation_normalizer.py
services/quant_ops_api/: Dockerfile  README.md  pyproject.toml
services/quant_ops_api/src/quant_ops_api/: __init__.py  main.py
services/quant_ops_api/tests/: test_artifact_ledger_route.py  test_artifact_ledger_service.py  test_artifact_object_store.py  test_config.py  test_factor_comparison_artifact_service.py  test_factor_lab_client.py  test_factor_lab_route.py  test_factor_validation_client.py  test_factor_validation_review_route.py  test_factor_validation_review_service.py  test_health_route.py  test_market_data_route.py  test_market_data_service.py  test_overview_route.py  test_overview_service.py  test_quant_data_hub_client.py  test_validation_ledger_reader.py
(+172 files in other folders)
