[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-data-sdk"
version = "0.1.0"
description = "Python client SDK for quant_data_hub"
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.0,<3.0",
  "quant-contracts",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
