[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-factor-lab"
version = "0.1.0"
description = "Factor calculation service for Zeta Quant System"
requires-python = ">=3.12,<3.13"
dependencies = [
  "asyncpg>=0.29,<1.0",
  "fastapi>=0.115,<0.116",
  "pydantic-settings>=2.0,<3.0",
  "quant-contracts",
  "quant-data-sdk",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
