[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-ops-api"
version = "0.1.0"
description = "Read-only operations API for Zeta Quant System"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<0.116",
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.0,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
